test/spec_vectors/simd_i16x8_sat_arith/fail/module_16.wat
(module (func $i16x8.sub_sat_u-arg-empty (result v128) (i16x8.sub_sat_u)))